--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,17 @@
+# Built application files
+*.apk
+*.ap_
 
+# Files for the Dalvik VM
+*.dex
+
+# Java class files
 *.class
+
+# Generated files
+bin/
+gen/
+
+# Gradle files
+.gradle/
+build/
