--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,6 +3,9 @@
     package="com.example.hsa"
     android:versionCode="1"
     android:versionName="1.0" >
+    
+    <!--  Internet Permissions -->
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <uses-sdk
         android:minSdkVersion="14"
