Ignore Generated files

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,47 @@ gen/*
 # Gradle files
 .gradle/
 build/
+
+bin/
+
+gen/
+
+bin/classes.dex
+
+bin/classes/com/example/hsa/LoginActivity.class
+
+bin/classes/com/example/hsa/R$id.class
+
+bin/HSA.apk
+
+bin/resources.ap_
+
+bin/classes/com/example/hsa/LoginActivity.class
+
+*.xml
+
+bin/AndroidManifest.xml
+
+bin/classes.dex
+
+bin/classes/com/example/hsa/R$id.class
+
+bin/HSA.apk
+
+bin/resources.ap_
+
+gen/com/example/hsa/R.java
+
+bin/AndroidManifest.xml
+
+bin/classes.dex
+
+bin/classes/com/example/hsa/LoginActivity.class
+
+bin/classes/com/example/hsa/R$id.class
+
+bin/HSA.apk
+
+bin/resources.ap_
+
+gen/com/example/hsa/R.java
